--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/APIData
+spring.datasource.username=postgres
+spring.datasource.password=mysecretpassword
